#2660 Fix layout issue.

--- a/html/themes/custom/pmmi_bootstrap/css/style.css
+++ b/html/themes/custom/pmmi_bootstrap/css/style.css
@@ -13568,6 +13568,12 @@ body.use-container .page-title.hidden {
   }
 }
 
+.node-layout .container .containers .container,
+.sitewide .container .containers .container {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .block {
   margin-bottom: 20px;
 }
